# conte-curator

./: .markdownlint.json  configuration.default.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
docs/: Design.md
schemas/: configuration.schema.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: enums.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250310_014557_create_media.rs
src-tauri/src/: configuration.rs  data_store.rs  lib.rs  main.rs
src-tauri/src/configuration/: logging.rs
src/theme/: _smui-theme-typography.scss  _smui-theme.scss
static/: smui-dark.css  smui.css
