[package]
name = "conte-curator"
version = "1.0.0-alpha"
description = "A cross-platform media manager and player built on libVLC"
authors = ["JEleniel (https://github.com/JEleniel)"]
edition = "2024"

[lib]
name = "conte_curator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4.39"
config = { version = "0.15.8", features = ["json"] }
dirs = "6.0.0"
entity = { path = "entity" }
fern = { version = "0.7.1", features = ["colored"] }
log = { version = "0.4.25", features = ["serde"] }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"debug-print",
	"with-chrono",
	"with-json",
	"with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2.0.0"
tokio = { version = "1.44.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
