[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"debug-print",
	"with-chrono",
	"with-json",
	"with-uuid",
] }
chrono = "0.4.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2.5.4", features = ["serde"] }
