[package]
name = "migration"
version = "1.0.0-alpha"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.0", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"with-chrono",
	"with-json",
	"with-uuid",
] }
